[DOC] report: complete NE, add QR and remove tmp section

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -747,7 +747,15 @@ n$-матрицу, причем в каждой ее строке содержи
 
 Данный отчет посвящен поиску методов, которые позволили бы решить задачи
 (\ref{eq:problem1}) - (\ref{eq:problem1-cond}) или (\ref{eq:problem2}) -
-(\ref{eq:problem2-cond}) наиболее эффективно.
+(\ref{eq:problem2-cond}) наиболее эффективно. В предшествующих работах был
+использован алгоритм из статьи \cite{BierlaireTointTuyttens1991}, основанный
+на методике, использующей известный алгоритм LSQR (который был опубликован в 
+статье \cite{PaigeSaunders1982}). Для более подробного изучения метода
+следует ознакомиться с процессом Ланцоша (см. \cite{Lanczos1950}) и
+бидиагонализационной процедурой Голубя - Кагана (см. \cite{Golub1965}).
+
+В данной работе мы попытались найти альтернативные подходы к решению данной 
+проблемы.
 
 \section{Метод нормальных уравнений}
 
@@ -771,12 +779,81 @@ $$
 2 \partial x^{T} (A^{T} b - A^{T} A x)
 $$
 
-Минимум
+Минимум достигается тогда, когда производные по всем возможным направлениям 
+равны нулю, откуда получаем так называемые \textbf{нормальные уравнения}:
+
+\begin{equation}
+ A^{T} A x = A^{T} b
+\end{equation}
+
+Решение можно получить как
+
+\begin{equation}
+ x = (A^{T} A)^{-1} A^{T} b = A^{\dag} b
+\end{equation}
+
+где $A^{\dag} = (A^{T} A)^{-1} A^{T}$ -- псевдообратная матрица Мура - Пенроуза
+(которую часто называют просто псевдообратной матрицей).
+
+Если столбцы матрицы $A$ не слишком близки к линейно зависимым, т. е. если 
+задача не является плохо обусловленной, часто просто образуют нормальные 
+уравнения и решают их с помощью метода факторизации Холецкого:
+
+\begin{equation}
+ A^{T} A = R^{T} R
+\end{equation}
+
+где $R$ -- верхняя треугольная матрица.
+
+На основе метода нормальных уравнений написана библиотека TSNNLS для решения
+задач наименьших квадратов с ограничениями типа условий неотрицательности.
+Подробно данная библиотека описана в статье \cite{CantarellaPiatek2004}, а в
+статье \cite{Portugal1994} дано теоретическое обоснование алгоритма.
+
+\section{QR факторизация}
+
+Другой подход состоит в том, что записывают QR-факторизацию:
+
+\begin{equation}
+ A = Q R = [Q_{1} Q_{2}]\left[\begin{array}{c}
+                               R_{1} \\
+                               0 \\
+                              \end{array}
+\right] = Q_{1} R_{1}
+\end{equation}
+
+где $Q \in \mathbb{R}^{m \times m}$ ортогональная ($Q^{T} Q = I$) и $R$ --
+верхняя треугольная. Столбцы матрицы $Q_{1} \in \mathbb{R}^{m \times n}$
+образуют ортонормированный базис в образе оператора $A$, а столбцы матрицы 
+$Q_{2}$ -- базис в ортогональном дополнении. Факторизацию
+$A = Q_{1} R_{1}$ иногда называют "экономичной" QR-факторизацией.
+
+Поскольку умножение на ортогональную матрицу не изменяет длины, можно записать,
+что
+
+\begin{equation}
+ ||r||^{2} = ||Q^{T} r||^{2} =
+ ||R_{1} x - Q_{1}^{T} b||^{2} + ||Q_{2}^{T} b||^{2}
+\end{equation}
+
+Вторая часть выражения ($||Q_{2}^{T} b||^{2}$) есть ошибка, уменьшить которую
+мы не можем, но зато можно добиться зануления $R_{1} x - Q_{1}^{T} b$.
+Следовательно, решение задачи наименьших квадратов получается как решение
+следующего уравнения:
+
+\begin{equation}
+ x = R_{1}^{-1} Q_{1}^{T} b
+\end{equation}
+
+
+
+
 
 \section{PDCO -- первично-двойственный метод выпуклой оптимизации}
 
 В данном разделе разобран алгоритм PDCO, представленный в работе
-\cite{Saunders2013} (см. также страницу проекта \cite{PDCO}). Здесь мы приводим
+\cite{Saunders2013} (см. также страницу проекта \cite{PDCO}, а также статью 
+\cite{ChenDonohoSaunders2001}). Здесь мы приводим
 выдержки из упомянутой статьи и приводим обоснования некоторых используемых 
 методов.
 
@@ -793,9 +870,9 @@ Matlab  для решения задач следующего вида:
 Где $\phi(x)$ есть выпуклая функция с известным градиентом $g(x)$ и гессианом
 $H(x)$, а $A \in \mathbb{R}^{m \times n}$. К такому формату условий могут быть 
 приведены любые линейные условия. Например, двусторонние условия
-$\alpha \leq a^{T} \overbrace{x} \leq \beta$ следует переформулировать как
-$a^{T} \overbrace{x} - \xi = 0, \; \alpha \leq \xi \leq \beta$, где 
-$\overbrace{x}$ и $\xi$ суть две разные части вектора $x$.
+$\alpha \leq a^{T} \overline{x} \leq \beta$ следует переформулировать как
+$a^{T} \overline{x} - \xi = 0, \; \alpha \leq \xi \leq \beta$, где 
+$\overline{x}$ и $\xi$ суть две разные части вектора $x$.
 
 Для того чтобы допускалось решение задач наименьших квадратов, и для того чтобы
 обеспечить единственность первичного и двойственного решения (и для повышения
@@ -1099,11 +1176,6 @@ $\Delta x_{1}, \Delta x_{2}, \Delta z_{1}, \Delta z_{2}$ из уравнений
 
 
 
-\section{<Временный раздел>}
-
-Источники: \cite{BertsekasTsitsiklis1989, BierlaireTointTuyttens1991,
-CantarellaPiatek2004, ChenDonohoSaunders2001, Golub1965, Lanczos1950,
-PaigeSaunders1982, Saunders2013}.
 
 \newpage
 \bibliographystyle{plain}
