--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
@@ -123,6 +123,23 @@ non-negative variables},
   http://www.stanford.edu/group/SOL/software.html}
 }
 
+@article {Portugal1994,
+    AUTHOR = {Portugal, Lu{\'{\i}}s F. and J{\'u}dice, Joaqu{\'{\i}}m J. and
+              Vicente, Lu{\'{\i}}s N.},
+     TITLE = {A comparison of block pivoting and interior-point algorithms
+              for linear least squares problems with nonnegative variables},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {63},
+      YEAR = {1994},
+    NUMBER = {208},
+     PAGES = {625--643},
+      ISSN = {0025-5718},
+     CODEN = {MCMPAF},
+   MRCLASS = {90C20 (65K05)},
+  MRNUMBER = {95a:90059}
+  }
+
 @book{Vasilev1980,
     author = "Васильев, Ф.П.",
     title = "Численные методы решения экстремальных задач",
