[ODC] report: add gradient methods sections

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -512,8 +512,275 @@ $J = f_{k}(\alpha) = J(u_{k} - \alpha J'(u_{k}))$ в точке $(0, f_{k}(0))$.
 
 
 
+\section{Метод проекции градиента}
 
+Будем рассматривать задачу
 
+\begin{equation}
+ f(x) \to inf; \;\;\; x \in X \subset \mathbb{R}^{n}
+\end{equation}
+
+где множество $X$ есть, вообще говоря, несобственное подмножество в
+$\mathbb{R}^{n}$, а $f(x) \in C^{1}(X)$. Непосредственное применение
+описанного выше градиентного метода может привести к тому что очередная точка
+$x_{k + 1} \notin X$. Однако эту трудность можно преодолеть, если полученную
+точку $x_{k + 1} = x_{k} - \alpha_{k} f'(x_{k})$ при каждом $k$ проектировать
+на множество $X$. Таким образом, \textbf{метод проекции градиента}
+представляет из себя следующий итерационный процесс:
+
+\begin{equation}
+ x_{k + 1} = \mathcal{P}_{X}(x_{k} - \alpha_{k} f'(x_{k})), \;\;\;
+ k = 0, 1, \ldots
+\end{equation}
+
+где $\alpha_{k}$ -- положительная величина. В зависимости от выбора
+$\alpha_{k}$ можно получить различные варианты метода проекции градиента.
+В целом они идейно повторяют соответствующие варианты метода градиента.
+
+\section{Метод условного градиента}
+
+Этот метод приспособлен для решения задачи
+
+\begin{equation}
+ f(x) \to inf; \;\;\; x \in X
+\end{equation}
+
+где $X$ -- выпуклое замкнутое ограниченное множество из $\mathbb{R}^{n}$,
+функция $f(x) \in C^{1}(X)$. Пусть $x_{0} \in X$ -- некоторое начальное
+приближение. Если известно $k$-е приближение $x_{k} \in X, k \geq 0$, то
+приращение функции $f(x)$ в точке $x_{k}$ можем представить в виде
+
+\begin{equation}
+ f(x) - f(x_{k}) = \langle f'(x_{k}, x - x_{k}) + o(|x - x_{k}|) \rangle
+\end{equation}
+
+Возьмем главную линейную часть этого приращения
+
+\begin{equation}
+ f_{k}(x) = \langle f'(x_{k}, x - x_{k}) \rangle,
+\end{equation}
+
+и определим вспомогательное приближение $\overline{x}_{k}$ из условий
+
+\begin{equation}
+ \label{eq:constrained-gradient-method}
+ \overline{x}_{k} \in X, \;\;\;
+ \operatornamewithlimits{inf}_{X} f_{k}(x) = f_{k}(\overline{x}_{k}) =
+ \langle f'(x_{k}), \overline{x}_{k} - x_{k} \rangle
+\end{equation}
+
+Так как множество $X$ замкнуто и ограничено, а линейная функция $f_{k}(x)$
+непрерывна, то точка $\overline{x}_{k}$ всегда существует. Заметим, что если
+
+\begin{equation}
+ X = \{x \in \mathbb{R}^{n}: \; x \geq 0, \;
+ \langle a_{i}, x \rangle \leq b^{i}, \; i = 1, \ldots, m; \;
+ \langle a_{i}, x \rangle = b^{i}, i = m + 1, \ldots, s \},
+\end{equation}
+
+то задача (\ref{eq:constrained-gradient-method}) превратится в задачу линейного
+программирования.
+
+На практике частно довольствуются не точным решением задачи
+(\ref{eq:constrained-gradient-method}, а приближенным:
+
+\begin{equation}
+ \label{eq:constrained-gradient-method-approx}
+ \overline{x}_{k} \in X, \;
+ f_{k}(\overline{x}_{k}) \leq \operatornamewithlimits{min}_{X} f_{k}(x) +
+ \varepsilon_{k}, \;\;\; \varepsilon_{k} \geq 0, \;\;\;
+ \operatornamewithlimits{lim}_{k \to \infty} \varepsilon_{k} = 0.
+\end{equation}
+
+Допустим, что точка $\overline{x}_{k}$, удовлетворяющая условиям
+(\ref{eq:constrained-gradient-method-approx}) или
+(\ref{eq:constrained-gradient-method}) уже найдена. Тогда следующее
+$(k + 1)$-е приближение будем искать в виде
+
+\begin{equation}
+ x_{k + 1} = x_{k} + \alpha_{k} (\overline{x}_{k} - x_{k}), \;\;\;
+ 0 \leq \alpha_{k} \leq 1.
+\end{equation}
+
+\section{Метод возможных направлений}
+
+\begin{SmartDefinition}
+ Направление $e \neq 0$ называется \textbf{возможным} в точке $x \in X$,
+ если $x + t e \in X$ при всех $t, 0 \leq t \leq t_{0}$, где $t_{0}$ --
+ положительное число, зависящее от точки $x$, направления $e$ и от
+ структуры множества $X$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Направление $e \neq 0$ называется \textbf{возможным направлением убывания}
+ функции $f(x)$ в точке $x$ на множестве $X$, если $e$ -- возможное
+ направление в точке $x$ и $f(x + \alpha e) < f(x)$ при всех
+ $\alpha, 0 < \alpha < \beta$, где $0 < \beta \leq t_{0}$.
+\end{SmartDefinition}
+
+Метод возможных направлений состоит в том, что на каждом шаге определяется
+возможное направление убывания и производится шаг вдоль этого направления.
+Ключевым вопросом при применении метода возможных направлений является
+наличие простых и достаточно удобных для реализации на ЭВМ способов выбора
+возможных направлений убывания. Приведем некоторые примеры. Рассмотрим
+задачу:
+
+\begin{equation}
+ f(x) \to inf; \;\;\; x \in X \{x \in \mathbb{R}^{n}: \; g_{i}(x) \leq 0,
+ \; i = 1, \ldots, m\},
+\end{equation}
+
+где функции $f(x), g_{i}(x), i = 1, \ldots, m,$ определены на всем пространстве
+$\mathbb{R}^{n}$ и $f(x), g_{i}(x) \in C^{1}(X)$. Пусть известно $k$-е
+приближение $x_{k} \in X, k \geq 0$. Введем множество номеров
+
+\begin{equation}
+ I_{k} = \{i: \; 1 \leq i \leq m, g_{i}(x_{k}) = 0\}.
+\end{equation}
+
+Возможно, что $I_{k} = \varnothing$, -- это будет означать, что
+$g_{i}(x_{k}) < 0$ при всех $i = 1, \ldots, m$, т. е. $x_{k} \in int \; X$ --
+такая возможность ниже не исключается. В пространстве переменных
+
+\begin{equation}
+ z = (e, \sigma) = (e^{1}, \ldots, e^{n}, \sigma) \in \mathbb{R}^{n}
+\end{equation}
+
+рассмотрим вспомогательную задачу
+
+\begin{equation}
+\label{eq:possible-directions-simple}
+\sigma \to inf, \;\;\; z = (e, \sigma) \in W_{k} =
+\{(e, \sigma): \;\;\; \langle f'(x_{k}), e \rangle \leq \sigma,
+\langle g_{i}'(x_{k}), e \rangle \leq \sigma, i \in I_{k}; \;\;\;
+|e^{j}| \leq 1, j = 1, \ldots, n \} 
+\end{equation}
+
+Заметим, что задача (\ref{eq:possible-directions-simple}) является задачей
+линейного программирования, причем минимизируемая функция явно не зависит от 
+переменных $e = (e^{1}, \ldots, e^{n})$. Далее, ясно, что $(0, 0) \in W_{k}$,
+так что $W_{k} \neq \varnothing$ и
+$\operatornamewithlimits{inf}_{W_{k}} \sigma = \sigma_{k} \leq 0$ при всех
+$k = 0, 1, \ldots$. Очевидно, множество $W_{k}$ замкнуто. Наконец, условия
+$|e^{j}| \leq 1, j = 1, \ldots, n$, называемые условиями нормировки,
+гарантируют ограниченность множества $W_{k}$. Следовательно, задача
+(\ref{eq:possible-directions-simple}) имеет хотя бы одно решение.
+
+Предположим, что задача (\ref{eq:possible-directions-simple}) решена и найдены
+$(e_{k}, \sigma_{k}) \in W_{k}$ такие, что
+$\sigma_{k} = \operatornamewithlimits{inf}_{W_{k}} \sigma$. Выше было замечено,
+что $\sigma_{k} \leq 0$.
+
+Сначала рассмотрим случай $\sigma_{k} < 0$. Оказывается, в этом случае
+направление $e_{k}$, полученное из задачи (\ref{eq:possible-directions-simple}),
+является возможным направлением убывания.
+
+Используя найденное таким образом направление $e_{k}$, следующее $(k + 1)$-е
+приближение определим так:
+
+\begin{equation}
+ \label{eq:possible-directions-iter}
+ x_{k + 1} = x_{k} + \alpha_{k} e_{k}, \;\;\; 0 < \alpha_{k} \leq \beta_{k},
+\end{equation}
+
+\begin{equation}
+ \beta_{k} = sup \{\alpha: \; x_{k} + t e _{k} \in X, 0 \leq t \leq \alpha\} > 0
+\end{equation}
+
+Выбирая $\alpha_{k}$ различными способами в (\ref{eq:possible-directions-iter}),
+будем получать различные варианты метода возможных направлений.
+
+\section{Проксимальный метод}
+
+Этот метод используется для решения выпуклых задач минимизации
+
+\begin{equation}
+ f(x) \to inf, \;\;\; x \in X,
+\end{equation}
+
+когда $X$ -- выпуклое замкнутое множество из $\mathbb{R}^{n}$, функция $f(x)$
+выпукла на $X$. В его основе лежит понятие \textbf{проксимального оператора},
+который определяется следующим образом. Фиксируются точка $x \in \mathbb{R}^{n}$
+и число $\alpha > 0$, определяется функция
+
+\begin{equation}
+ \phi(z, x, \alpha) = \frac{1}{2} |z - x|^{2} + \alpha f(z)
+\end{equation}
+
+переменной $z \in X$, и рассматривается задача минимизации
+
+\begin{equation}
+ \label{eq:proximal-problem}
+ \phi(z, x, \alpha) \to inf, \;\;\; z \in X.
+\end{equation}
+
+Можно показать, что таким образом данное определение обеспечивает тот факт,
+что задача (\ref{eq:proximal-problem}) имеет, притом единственное решение
+$z_{*} = z_{*}(x, \alpha)$. Тем самым определен оператор, который каждой точке
+$x \in \mathbb{R}^{n}$ и числу $\alpha > 0$ ставит в соответствие решение
+$z_{*}$ задачи (\ref{eq:proximal-problem}). Этот оператор называется
+\textbf{проксимальным}, его обозначают символом $pr$. Можно показать следующую
+связь между проксимальным оператором и оператором проектирования:
+
+\begin{equation}
+ pr(x, \alpha) = \mathcal{P}_{X}(x - \alpha f'(pr(x, \alpha))) \;\;\;
+ \forall x \in \mathbb{R}^{n}, \;\;\; \alpha > 0.
+\end{equation}
+
+Проксимальный метод заключается в построении последовательности $\{x_{k}\}$ по
+следующему правилу:
+
+\begin{equation}
+ \label{eq:proximal-method}
+ x_{k + 1} = pr(x_{k}, \alpha_{k}), \;\;\; k = 1, 2, \ldots,
+\end{equation}
+
+где начальная точка $x_{0}$ и последовательность $\{\alpha_{k}\}$
+предполагаются заданными. Итерационный процесс (\ref{eq:proximal-method})
+основан на известном из анализа методе поиска неподвижных точек сжимающих
+операторов и идейно близок к рассмотренному выше методу проекции градиента.
+
+\section{Метод линеаризации}
+
+Этот метод на каждой итерации использует линейные аппроксимации минимизируемой
+функции и функций, задающих ограничения. Опишем его для задачи
+
+\begin{equation}
+ f(x) \to inf, \;\;\;
+ x \in X  = \{x \in X_{0}: g_{1} \leq 0, \ldots, g_{m}(x) \leq 0\},
+\end{equation}
+
+предполагая, что $X_{0}$ -- выпуклое замкнутое множество из $\mathbb{R}^{n}$
+и функции $f(x), g_{i}(x) \in C^{1}(X_{0})$. Пусть $x_{0}$ -- начальное
+приближение, $x_{0} \in X_{0}$. Предположим, что $k$-е приближение
+$x_{k} \in X_{0}$ при некотором $k \geq 0$ уже известно. Введем функцию
+
+\begin{equation}
+ \Phi_{x} = \frac{1}{2} |x - x_{k}|^{2} +
+ \alpha_{k} \langle f'(x_{k}), x - x_{k} \rangle, \;\;\; \alpha_{k} > 0, 
+\end{equation}
+
+и множество
+
+\begin{equation}
+ W_{k} = \{x \in X_{0}: \;\;\;
+ g_{i}(x_{k}) + \langle g_{i}'(x_{k}), x - x_{k} \rangle \leq 0,
+ i = 1, \ldots, m \}.
+\end{equation}
+
+Пусть $W_{k} \neq \varnothing$. В качестве $(k + 1)$-го приближения $x_{k + 1}$
+возьмем решение следующей задачи минимизации:
+
+\begin{equation}
+ \label{eq:linearization-problem}
+ \Phi_{k}(x) \to inf, \;\;\; x \in W_{k},
+\end{equation}
+
+Если $X_{0}$ многогранное множество, то задача (\ref{eq:linearization-problem})
+представляет собой задачу квадратичного программирования и может быть решена
+конечношаговым методом (см. следующий раздел). Если $W_{k}$ -- ограниченное
+множество, то для решения задачи (\ref{eq:linearization-problem}) может быть
+использован, например, метод условного градиента.
 
 \section{Квадратичное программирование}
 
@@ -801,6 +1068,69 @@ $z = w + \alpha_{0} e_{*}$, где $\alpha_{0}$ -- достаточно мало
 построить последовательность особых точек исходной задачи, на которой 
 функционал убывает и, следовательно, таким образом можно найти искомое решение
 задачи.
+
+\section{Метод сопряженных направлений}
+
+В методе сопряженных направлений строится последовательность направлений поиска
+$p_{k}$, являющихся линейными комбинациями градиента и предыдущих
+направлений.
+
+Алгоритм метода выражается следующими расчетными формулами:
+
+\begin{equation}
+ \label{eq:conjugate-method}
+ x_{k + 1} = x_{k} - \lambda_{k} p_{k}, \;\;\; k = 0, 1, \ldots
+\end{equation}
+
+\begin{equation}
+ p_{0} = \nabla f(x_{0}), \;\; p_{k} = \nabla f(x_{k}) + \beta_{k} p_{k - 1},
+ \;\; k = 1, 2, \ldots
+\end{equation}
+
+где $\beta_{k}$ -- весовые коэффициенты, одним из способов определения которых
+служит следующая формула:
+
+\begin{equation}
+ \beta_{k} = 
+ \frac{\sum \limits_{i = 1}^{n}(\frac{\partial f}{\partial x_{i})}^{2}_{x_{k}}}
+ {\sum \limits_{i = 1}^{n}(\frac{\partial f}{\partial x_{i})}^{2}_{x_{k - 1}}}
+\end{equation}
+
+Ниже приводятся этапы этого алгоритма.
+
+\textbf{1}. В исходной точке $x_{0}$ вычисляют градиент как начальное 
+направление поиска, т. е.
+
+\begin{equation}
+ p_{0} = \nabla f(x_{0})
+\end{equation}
+
+\textbf{2}. По формуле (\ref{eq:conjugate-method}) находят точку $x_{k + 1}$,
+минимизируя функцию $f$ по $\lambda$ с помощью методов одномерного поиска.
+
+\textbf{3}. Вычисляют в точке $x_{k + 1}$ значение функции $f(x_{k + 1})$ и
+значение градиента $\nabla f(x_{k + 1})$.
+
+\textbf{4}. Определяют новое направление поиска из соотношения
+
+\begin{equation}
+ p_{i}^{k + 1} = (\frac{\partial f}{\partial x_{i}})_{x_{k + 1}} + p_{i}^{k}
+ \frac
+ {\sum \limits_{i = 1}^{n}(\frac{\partial f}{\partial x_{i})}^{2}_{x_{k + 1}}}
+ {\sum \limits_{i = 1}^{n}(\frac{\partial f}{\partial x_{i})}^{2}_{x_{k}}}
+\end{equation}
+
+и так далее
+
+\textbf{5}. Поиск заканчивают при выполнении условия:
+
+\begin{equation}
+ \sqrt{\sum \limits_{i = 1}^{n} (p_{i}^{k})^{2}} \leq \varepsilon
+\end{equation}
+
+Алгоритм метода может предусматривать обновление через каждые $m$ итераций, 
+тогда точка $A_{m + 1}$ становится исходной, и поиск вновь начинается с 
+направления антиградиента функции.
 
 
 
