[DOC] tech-report: add intro to 2nd section

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -99,6 +99,33 @@
 \section{Преобразование двойственности и опорное представление
 выпуклого тела (исторический обзор)}
 
+Ключевыми инструментами, использующимися в данной работе для решения задачи
+восстановления трехмерных тел являются понятие \textbf{преобразования
+двойственности} и понятие \textbf{опорной функции выпуклого тела}. Первое из
+них активно используется для решения задач вычислительной геометрии, поскольку
+оно позволяет путем несложных преобразований над системой входных данных
+переформулировать задачу так, чтобы понятия "точка" и "плоскость" поменялись
+местами, что позволяет сводить новые задачи к таким, для которых уже имеются
+известные методы решения. Примерами таких приложений преобразования
+двойственности являются такие задачи как:
+
+\begin{itemize}
+ \item Нахождение пересечения многогранников.
+ \item Нахождение треугольника минимальной площади с вершинами на заданном
+множестве точек \cite{journals/BIT/ChazelleG1985}
+ \item Разбиение множества точек на плоскости прямой на 2 класса, лежащих по
+ разные стороны от прямой
+\end{itemize}
+
+и многие другие.
+
+Второе понятие широко используется в такой области как \textbf{геометрическая
+томография}. Суть подхода состоит в том, что любое выпуклое тело однозначно
+определяется своей опорной функцией и задачу восстановления тела можно свести к
+задаче восстановления опорной функции этого тела. В работе
+\cite{journals/cviu/GhoshK98} приводится анализ опорного представления и, между 
+прочим, приводится его связь с преобразованием двойственности.
+
 \subsection{Понятие полярного преобразования двойственности}
 
 \subsection{Пересечение многогранников и выпуклая оболочка многогранников --
