[DOC] tech-report: add definition of duality transformation

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -128,6 +128,36 @@
 
 \subsection{Понятие полярного преобразования двойственности}
 
+Термин преобразования двойственности имеет хождение в вычислительной геометрии,
+где он нашел широкое применение. В проективной геометрии данный термин имеет
+сходство с понятием поляры.
+
+\begin{SmartDefinition}
+ Пусть $\mathbb{R}^{n}$ - евклидово пространство. \textbf{Преобразованием 
+двойственности} называется отображение $\delta$, определенное на множествах
+аффинных подпространств пространства $R^{n}$, не содержащих начало координат
+$0 = (0, \ldots, 0)$, действующее следующим образом:
+\begin{itemize}
+ \item Пусть $A \neq 0$ -- подпространство размерности $0$ (т. е. точка),
+ $A = (a_{1}, a_{2}, \ldots, a_{n}) \neq 0$. Тогда ему ставится в
+ соответствие аффинное гиперпространство $\delta(A)$, описываемое линейным
+ уравнением $a_{1} x_{1} + a_{2} x_{2} + \ldots + a_{n} x_{n} = 1$.
+ \item Пусть $L$ -- некоторое аффиное гиперпространство (т. е. 
+ подпространство размерности $n - 1$), не содержащее начало координат. Тогда его
+ можно описать с помощью уравнения
+ $a_{1} x_{1} + a_{2} x_{2} + \ldots + a_{n} x_{n} = 1$, причем коэффициенты
+ этого уравнения определяются однозначно. Тогда преобразование двойственности
+ ставит в соответствие $L$ точку $\delta(L) = (a_{1}, a_{2}, \ldots, a_{n})$.
+ \item Пусть $L$ -- подпространство размерности $k \neq 0, n - 1, n$. Тогда ему
+ ставится в соответствие подпространство размерности $n - k - 1$, определяемое
+ как $\delta(L) = \{\delta(M) \; | \; L \subset M, dim M = n - 1\}$.
+\end{itemize}
+
+\end{SmartDefinition}
+
+
+
+
 \subsection{Пересечение многогранников и выпуклая оболочка многогранников --
 двойственные задачи}
 
