[DOC] tech-report: add bibitem Muller1978217

--- a/Documentation/i.palachev/Thesis/TechnicalReport/references.bib
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/references.bib
@@ -305,6 +305,30 @@ TODO: correct the place of publishing of Lele's B. S. Thesis.
   year = 1999
 }
 
+@article{Muller1978217,
+  title = "Finding the intersection of two convex polyhedra ",
+  journal = "Theoretical Computer Science ",
+  volume = "7",
+  number = "2",
+  pages = "217 - 236",
+  year = "1978",
+  note = "",
+  issn = "0304-3975",
+  doi = "http://dx.doi.org/10.1016/0304-3975(78)90051-8",
+  url = "http://www.sciencedirect.com/science/article/pii/0304397578900518",
+  author = "D.E. Muller and F.P. Preparata",
+  abstract = "Given two convex polyhedra in three-dimensional space, we develop
+  an algorithm to (i) test whether their intersection is empty, and (ii) if so
+  to find a separating plane, while (iii) if not to find a point in the
+  intersection and explicitly construct their intersection polyhedron. The
+  algorithm runs in timeO (n log n), where n is the sum of the numbers of
+  vertices of the two polyhedra. The part of the algorithm concerned with (iii)
+  (constructing the intersection) is based upon the fact that if a point in the
+  intersection is known, then the entire intersection is obtained from the
+  convex hull of suitable geometric duals of the two polyhedra taken with
+  respect to this point. "
+}
+
 @article{journals/acmtms/PaigeS1982,
   author = {Paige, Christopher C. and Saunders, Michael A.},
   title = {LSQR: An Algorithm for Sparse Linear Equations and Sparse Least
