--- a/Documentation/i.palachev/Thesis/TechnicalReport/references.bib
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/references.bib
@@ -349,6 +349,14 @@ TODO: correct the place of publishing of Lele's B. S. Thesis.
   address = {New York, NY, USA},
 } 
 
+@book{Preparata:1985:CGI:4333,
+  author = {Preparata, Franco P. and Shamos, Michael I.},
+  title = {Computational Geometry:  An Introduction},
+  year = {1985},
+  isbn = {0-387-96131-3},
+  publisher = {Springer-Verlag New York, Inc.},
+  address = {New York, NY, USA},
+} 
 
 @article{journals/pami/PrinceW90,
   added-at = {2011-11-07T00:00:00.000+0100},
