[DOC] tech-report: write subsection about polyhedra intersection

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -155,14 +155,65 @@ $0 = (0, \ldots, 0)$, действующее следующим образом:
 
 \end{SmartDefinition}
 
-
-
-
 \subsection{Пересечение многогранников и выпуклая оболочка многогранников --
 двойственные задачи}
 
-\subsection{Пересечение полупространств и выпуклая оболочка вершин -- 
-двойственные задачи}
+Свое распространение в вычислительной геометрии преобразование двойственности
+получило благодаря статье Мюллера - Препараты \ref{Muller1978217}, в которой
+описывается метод построения пересечения выпуклых многогранников. Он описан
+также в классической монографии Препараты - Шеймоса "Введение в вычислительную
+геометрию" \ref{Preparata:1985:CGI:4333}. Основная идея заключается в том, что
+преобразование можно расширить на класс многогранных тел, если сопоставлять
+вершинам -- грани, граням -- вершины, а всякому ребру, соединяющему некоторые
+две точки $A_{1}$ и $A_{2}$, -- ребро, разделяющее грани $\delta(A_{1})$ и
+$\delta(A_{2})$. Справедлива также следующая теорема:
+
+%% TODO: Разъяснить понятия полиэдра, многогранника и многогранного множества.
+%% Как они связаны между собой?
+
+\begin{SmartTheorem}
+ Если $P$ -- выпуклый полиэдр, содержащий начало координат, то таким же является
+ и двойственный к нему полиэдр $P^{(\delta)}$.
+\end{SmartTheorem}
+
+Метод построения пересечения можно сформулировать в виде следующей теоремы:
+
+\begin{SmartTheorem}
+ Пусть $P$ и $Q$ -- полиэдры, имеющие общую точку. Предположим без ограничения
+ общности, что эта точка -- начало координат. Тогда справедливо следующее
+ соотношение:
+ \begin{equation}
+  \delta(P \bigcap Q) = conv (P^{(\delta)} \bigcup Q^{(\delta)})
+ \end{equation}
+\end{SmartTheorem}
+
+Здесь через $conv (P^{(\delta)} \bigcup Q^{(\delta)})$ обозначена выпуклая
+оболочка объединения многогранников $P^{(\delta)}$ и $Q^{(\delta)}$, которую
+можно найти как выпуклую оболочку объединения множеств $V_{P}^{(\delta)}$ и
+$V_{Q}^{(\delta)}$ вершин полиэдров $P^{(\delta)}$ и $Q^{(\delta)}$:
+
+\begin{equation}
+ conv (P^{(\delta)} \bigcup Q^{(\delta)}) = conv (V_{P}^{(\delta)} \bigcup
+ V_{Q}^{(\delta)})
+\end{equation}
+
+Выпуклую оболочку точек можно построить с помощью известных алгоритмов
+построения выпуклых оболочек, имеющих сложность $O(N \log N)$
+
+Данный результат можно обобщить и на случай бесконечных выпуклых многогранных
+множеств. В частности, справедлива следующая теорема:
+
+\begin{SmartTheorem}
+ Пусть $\pi_{1}, \pi_{2}, \ldots, \pi_{n}$ -- набор произвольных плоскостей в
+ $\mathbb{R}^{3}$, а $R_{\pi_{1}}, R_{\pi_{2}}, \ldots, R_{\pi_{n}}$ --
+ соответствующие им полупространства, содержащие начало координат $O$. Тогда
+ пересечение этих полупространств можно найти с помощью следующего соотношения:
+ \begin{equation}
+  \delta \left(\bigcap \limits_{i = 1}^{n} R_{\pi_{i}} \right) = conv 
+(\delta(\pi_{1}),
+  \delta(\pi_{2}), \ldots, \delta(\pi_{n}))
+ \end{equation}
+\end{SmartTheorem}
 
 \subsection{Опорное и точечное зондирование -- двойственные задачи}
 
