[DOC] tech-report: add section about Greschak's thesis
It was imported from previous report
i.palachev_ReportAboutReconstruction.tex

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -155,7 +155,7 @@ $0 = (0, \ldots, 0)$, действующее следующим образом:
 
 \end{SmartDefinition}
 
-\subsection{Пересечение многогранников и выпуклая оболочка многогранников --
+\subsection{Пересечение многогранников и построение выпуклой оболочки --
 двойственные задачи}
 
 Свое распространение в вычислительной геометрии преобразование двойственности
@@ -209,15 +209,65 @@ $V_{Q}^{(\delta)}$ вершин полиэдров $P^{(\delta)}$ и $Q^{(\delta
  соответствующие им полупространства, содержащие начало координат $O$. Тогда
  пересечение этих полупространств можно найти с помощью следующего соотношения:
  \begin{equation}
-  \delta \left(\bigcap \limits_{i = 1}^{n} R_{\pi_{i}} \right) = conv 
-(\delta(\pi_{1}),
-  \delta(\pi_{2}), \ldots, \delta(\pi_{n}))
+  \delta \left(\bigcap \limits_{i = 1}^{n} R_{\pi_{i}} \right) =
+  conv (\delta(\pi_{1}), \delta(\pi_{2}), \ldots, \delta(\pi_{n}))
  \end{equation}
 \end{SmartTheorem}
 
+
+
 \subsection{Опорное и точечное зондирование -- двойственные задачи}
 
-\subsection{Понятие опорной функции выпуклого тела}
+Еще одно применение преобразования двойственности было открыто в диссертации
+Greschak \cite{thesis/Greschak1985}. В ней исследовались в
+частности две задачи восстановления и была доказана их
+двойственность (т. е. сведение одной задачи к другой с помощью
+преобразования двойственности и наоборот). Приведем здесь коротко этот
+результат.
+
+Определим так называемую \textbf{пробную функцию} некоторого выпуклого тела $K$:
+
+\begin{equation}
+ probe(x) = \alpha x, \;\;\; \alpha x \in \partial K
+\end{equation}
+
+В работе Greschak формулируются следующие две задачи:
+
+\begin{flushleft}
+ (\textbf{Задача 1}) Восстановить неизвестный ограниченный выпуклый
+ многогранник $K$ путем выделения последовательности точек
+ $x_{1}, x_{2}, \ldots, x_{k}$ и вычисления пробной функции $probe(x)$ тела $K$
+ в каждой из этих точек.
+\end{flushleft}
+
+\begin{flushleft}
+ (\textbf{Задача 2}) Восстановить неизвестный ограниченный выпуклый
+ многогранник $K$ путем выделения последовательности плоскостей
+ $r_{1}, r_{2}, \ldots, r_{k}$ и вычисления опорной функции $support(x)$ тела
+ $K$ в каждой из этих плоскостей.
+\end{flushleft}
+
+При этом в диссертации опорная функция определяется на плоскостях, а не на
+векторах, то есть $support(\pi) = \alpha \pi$, где $\alpha \pi$ -- плоскость,
+опорная к телу $K$ (то есть такая, что $\alpha \pi \cap K \neq \varnothing$ и
+тело $K$ целиком лежит по одну сторону от плоскости $\alpha \pi$).
+
+В работе представлены результаты, представляющие собой решения задач (1) и 
+(2). Одним из результатов диссертации Greschak является следующая теорема:
+
+\begin{SmartTheorem}
+ Если алгоритм $A$ восстанавливает неизвестный ограниченный выпуклый 
+ многогранник $P$ в $\mathbb{R}^{n}$ путем выделения последовательности точек
+ $x_{1}, x_{2}, \ldots, x_{k}$ и вычисления пробной функции $probe(x)$ в каждой 
+ из этих точек, то существует также и двойственный алгоритм $A^{*}$, который
+ восстанавливает двойственный многогранник $P^{*}$ многогранника $P$ путем
+ выделения последовательности гиперплоскостей $r_{1}, r_{2}, \ldots, r_{k}$
+ (который являются двойственными к точкам $x_{1}, x_{2}, \ldots, x_{k}$)
+ и вычисления пробной функции $probe(x)$ в каждой из этих гиперплоскостей.
+ Обратное также верно.
+\end{SmartTheorem}
+
+
 
 \subsection{Свойства опорного представления}
 
