[DOC] rec-report: fix typo

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -151,7 +151,7 @@ $u \in S_{2}$:
 
 \begin{equation}h_{K}: S^{2} \to \mathbb{R}_{+}\end{equation}
 
-Более общее понятие включающее в себя выше указанное было введено в 1903 году
+Более общее понятие, включающее в себя выше указанное, было введено в 1903 году
 Минковским.
 
 \begin{SmartDefinition}
