[DOC] tech-report: add subsection about the definition of support function
It was imported from previous report
i.palachev_ReportAboutReconstruction.tex

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -96,8 +96,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Преобразование двойственности и опорное представление
-выпуклого тела (исторический обзор)}
+\section{Основные понятия: преобразование двойственности и опорное представление
+выпуклого тела}
 
 Ключевыми инструментами, использующимися в данной работе для решения задачи
 восстановления трехмерных тел являются понятие \textbf{преобразования
@@ -214,7 +214,85 @@ $V_{Q}^{(\delta)}$ вершин полиэдров $P^{(\delta)}$ и $Q^{(\delta
  \end{equation}
 \end{SmartTheorem}
 
+\subsection{Понятие опорной функции выпуклого тела}
 
+Вторым ключевым понятием данного исследования является так называемая
+\textbf{опорная функция выпуклого тела}, или \text{опорное представление
+выпуклого тела}.
+
+Для простоты будем рассматривать выпуклые тела в трехмерном пространстве
+$\mathbb{R}^{3}$, содержащие в своей внутренности начало координат $O$.
+Для некоторых понятий будем давать определения и формулировки для случая
+произвольной конечной размерности.
+
+Как известно, выпуклое тело можно однозначно представить как пересечение 
+полупространств всех его касательных плоскостей 
+$K = \bigcap \limits_{x \in K} R_{x}$, где $R_{x}$ -- то из двух
+полупространств, на которые плоскость $\pi_{x}$, касательная к телу $K$ в
+точке $x$, делит $\mathbb{R}^{3}$, которое содержит в себе целиком все тело
+$K$. Всякому выпуклому телу можно поставить в соответствие набор касательных 
+плоскостей $\pi_{x}$, по которым его можно построить. Обратное неверно: не
+всякому произвольному набору плоскостей можно поставить в соответствие тело,
+касающееся всех этих плоскостей.
+
+Всякую касательную плоскость $\pi_{x}$ можно однозначно охарактеризовать
+единичным вектором нормали $u_{x}$ и расстоянием $h_{x}$ от начала координат 
+$O$ до плоскости. Поскольку две разные касательные плоскости не могут иметь
+одинаковые векторы нормалей, то можно рассматривать множество всех касательных
+плоскостей выпуклого тела как функцию, определенную на всех единичных векторах
+$u \in S_{2}$:
+
+\begin{equation}h_{K}: S^{2} \to \mathbb{R}_{+}\end{equation}
+
+Более общее понятие, включающее в себя выше указанное, было введено в 1903 году
+Минковским.
+
+\begin{SmartDefinition}
+ \label{def:support-function}
+ Будем называть \textbf{опорной функцией} выпуклого тела
+ $K \subset \mathbb{R}^{n}$ следующую функцию
+ $h_{K}: \mathbb{R}^{n} \to \mathbb{R}_{+}$:
+
+ \begin{equation}h_{K}(u) = \max \limits_{x \in K}(x, u)\end{equation}
+\end{SmartDefinition}
+
+Если взять некоторую точку $u_{0}$ на единичной сфере $S^{n - 1}$, и вычислить
+в ней значение опорной функции $h_{K}(u_{0})$, то по этим данным можно
+построить касательную плоскость к выпуклому телу в некоторой (неизвестной!)
+точке $x \in K$. Такую плоскость (в контексте, когда нет информации о положении
+точки касания) принято называть опорной плоскостью.
+
+\begin{SmartDefinition}
+ \label{def:support-plane}
+ \textbf{Опорной плоскостью} выпуклого тела $K$ по
+ направлению $u \in S^{n - 1}$ называется плоскость с нормалью $u$, расстояние
+ от которой до начала координат равно $h_{K}(u)$
+\end{SmartDefinition}
+
+Очевидно, что опорная функция выпуклого тела обладает следующим свойством:
+
+\begin{equation}
+ h_{K}(\lambda u) = \lambda h_{K}(u)
+\end{equation}
+
+Следовательно, для практики достаточно иметь дело только с ограничением опорной
+функции на единичную сферу. В статье \cite{journals/jmiv/KarlKVW96} вводится
+понятие \textbf{приведенной опорной функции}:
+
+\begin{SmartDefinition}
+ \label{def:support-plane}
+ \textbf{Приведенной опорной функцией} выпуклого тела $K$ называется следующая
+функция:
+ \begin{equation}
+ H_{K} (u) = h_{K} \left(\frac{u}{||u||}\right)
+ \end{equation}
+\end{SmartDefinition}
+
+которая в действительности представляет собой расстояние от начала координат
+$\mathbb{O}$ до опорной гиперплоскости по направлению $u$.
+
+Более подробно свойства опорной функции рассматриваются в статье
+\cite{journals/cviu/GhoshK98}.
 
 \subsection{Опорное и точечное зондирование -- двойственные задачи}
 
@@ -267,9 +345,6 @@ Greschak \cite{thesis/Greschak1985}. В ней исследовались в
  Обратное также верно.
 \end{SmartTheorem}
 
-
-
-\subsection{Свойства опорного представления}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
