[DOC] tech-report: begin subsection about primary problem formulation

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -350,7 +350,47 @@ Greschak \cite{thesis/Greschak1985}. В ней исследовались в
 
 \section{Первичная и двойственная формулировка исходной проблемы}
 
+Задачу восстановления выпуклого тела по его теневым контурам можно
+сформулировать двумя способами. Первая формулировка представляет из себя
+простую наглядную геометрическую формулировку, а вторая -- двойственна ей, если
+говорить в терминах преобразования двойственности. Поясним вышесказанное и
+покажем, какие свойства проблемы и какие подходы к ее решению можно вывести из
+этого соображения.
+
 \subsection{Первичная формулировка проблемы}
+
+Первое, о чем следует сказать, есть то, что проблема возникает из прикладной
+задачи, и поэтому допускает некоторую нечеткость в своей формулировке. Это дает
+возможность математические формализации задачи.
+
+\begin{SmartDefinition}
+ Пусть $\pi$ -- некоторая плоскость в $\mathbb{R}^{3}$, проходящая через начало
+ координат $O = (0, 0, 0)$. \textbf{Теневым контуром}
+ $C = A_{1} A_{2} \ldots A_{n}$ называется  простая ломаная (т. е. ломаная без
+ самопересечений) с конечным числом вершин, лежащая в плоскости $\pi$ таким
+ образом, что ограниченная этой ломаной область в плоскости $\pi$ содержит
+ начало координат $O$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Пусть $K$ - некоторое тело в $\mathbb{R}^{3}$. \textbf{Теневым контуром тела}
+ $K$ на плоскости $\pi$, проходящей через начало координат $O$, называется
+ граница образа тела $K$ при отображении проецирования на плоскость $\pi$.
+\end{SmartDefinition}
+
+Пусть $K$ -- некоторое тело в $\mathbb{R}^{3}$. Пусть $C_{1}^{*}, C_{2}^{*},
+\ldots, C_{m}^{*}$ -- теневые контуры тела $K$ (\textbf{точные теневые
+контуры}). Пусть $C_{1}, C_{2}, \ldots, C_{m}$ -- теневые контуры, являющиеся
+приближениями соответствующих теневых контуров тела $K$ (\textbf{неточные
+теневые контуры}):
+
+\begin{equation}
+ C_{1}^{*} \approx C_{1}, \;\;\;
+ C_{2}^{*} \approx C_{2}, \;\;\;
+ \ldots, \;\;\;
+ C_{m}^{*} \approx C_{m}
+\end{equation}
+
 
 \subsection{Двойственная формулировка проблемы}
 
